force-app/main/default/objects/Cuenta_Rezago__mdt/Cuenta_Rezago__mdt.object-meta.xml
<CustomObject>
    <label>Cuenta Rezago</label>
    <pluralLabel>Cuenta Rezagos</pluralLabel>
</CustomObject>