force-app/main/default/objects/Cuenta_Rezago__mdt/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <businessOwnerUser>admin@fichohsa.org.com.fpcloudcod</businessOwnerUser>
    <description>Numero de cuenta al cual se realizara la transaccion</description>
    <label>Cuenta</label>
    <length>15</length>
    <type>Text</type>
</CustomField>