force-app/main/default/objects/Cuenta_Rezago__mdt/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripción del Fondo y Cuenta</description>
    <label>Descripcion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>