force-app/main/default/objects/Cuenta_Rezago__mdt/fields/Fondo__c.field-meta.xml
<CustomField>
    <fullName>Fondo__c</fullName>
    <description>Código del Fondo correspondiente a la Cuenta</description>
    <label>Fondo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>