force-app/main/default/objects/Cuenta_Rezago__mdt/listViews/VistaN.listView-meta.xml
<ListView>
    <fullName>VistaN</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Cuenta__c</columns>
    <columns>Descripcion__c</columns>
    <columns>Fondo__c</columns>
    <filterScope>Everything</filterScope>
    <label>VistaN</label>
</ListView>